Se agrego la contraportada y se agrego el resaltado de stellantis al mismo